<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="360dp">


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:weightSum="1">

        <TextView
            style="@style/text_temps"
            android:layout_width="88dp"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="1"
            android:gravity="center"
            android:id="@+id/tempo"
            android:layout_below="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo"
            android:id="@+id/textView"
            android:layout_marginLeft="76dp"
            android:layout_marginStart="76dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@drawable/up"
            android:layout_alignTop="@+id/tempo"
            android:layout_toRightOf="@+id/tempo"
            android:layout_toEndOf="@+id/tempo" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:src="@drawable/down"
            android:layout_below="@+id/imageButton"
            android:layout_toRightOf="@+id/tempo"
            android:layout_toEndOf="@+id/tempo" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibreur"
        android:id="@+id/vibreur"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/son"
            android:id="@+id/son"
            android:layout_below="@id/vibreur"
             />

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="1"
            android:gravity="center"
            android:id="@+id/temps"
            style="@style/text_temps"
            android:layout_alignBottom="@+id/temps_mesure"
            android:layout_centerHorizontal="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temps_mesure"
            android:layout_alignBottom="@+id/son"
            android:layout_toRightOf="@+id/temps"
            android:layout_toEndOf="@+id/temps"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp" />
        " />

    </RelativeLayout>




</LinearLayout>-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TextView
        android:text="@string/tempo"
        android:textSize="20dp"
        />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="10dip"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/plustempo"
            android:textSize="50dp"
            android:layout_column="0" />


        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="1"
            android:gravity="center"
            android:layout_column="1"
            android:id="@+id/tempo"
            style="@style/text_temps"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="50dp"
            android:id="@+id/moinstempo"
            android:layout_column="2" />


    </TableRow>




    <View
        android:layout_height="2dip"
        android:background="#FF909090"

        />

    <TextView
        android:text="@string/temps"
        android:textSize="20dp"
        />

    <TableRow>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/plustemps"
            android:textSize="50dp"
            android:layout_column="0" />


        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="coups/min"
            android:gravity="center"
            android:layout_column="1"
            android:id="@+id/temps"
            style="@style/text_temps"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="50dp"
            android:id="@+id/moinstemps"
            android:layout_column="2" />


    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090"
        />


    <TableRow
        android:padding="6dip"
        >

        <CheckBox
            android:text="@string/vibreur"
            android:id="@+id/vibreur"
            />

        <TextView
            android:text="4 temps"
            android:textSize="20dp"
            android:gravity="right"

            android:id="@+id/clignote"
            />


    </TableRow>

    <TableRow
        android:padding="6dip"
        >

        <CheckBox
            android:text="@string/son"
            android:id="@+id/son"
            />


    </TableRow>



    <TableRow
        android:padding="3dip"
        >

        <ToggleButton
            android:layout_column="0"
            android:layout_span="3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOff="@string/start"
            android:textOn="@string/stop"
            android:id="@+id/demarrer" />
    </TableRow>

</TableLayout>
